--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,13 @@ h1 {
   h1 {
     font-size: 60px; /* Adjust font size for mobile */
   }
+   #logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 20%; /* Adjust the size */
+    height: auto; /* Maintain aspect ratio */
+    filter: drop-shadow(0 0 2px rgba(95, 95, 95, 0.8))
+      /* Black outline shadow */ drop-shadow(0 0 10px rgba(255, 255, 255, 0.7)); /* White shadow for highlight */
+  }
 }
